[package]
name = "line_2d"
description = "Bresenham's line algorithm as a rust iterator"
version = "0.4.2"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/line-2d.git"
repository = "https://github.com/stevebob/line-2d.git"
documentation = "https://docs.rs/line_2d"

[features]
serialize = ["serde", "coord_2d/serialize", "direction/serialize"]

[dependencies]
coord_2d = "0.2"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
rand = "0.7"
grid_2d = "0.14"
