[package]
name = "line_2d"
description = "Bresenham's line algorithm as a rust iterator"
version = "0.5.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/line-2d.git"
repository = "https://github.com/gridbugs/line-2d.git"
documentation = "https://docs.rs/line_2d"
edition = "2021"

[features]
serialize = ["serde", "coord_2d/serialize", "direction/serialize"]

[dependencies]
coord_2d = "0.3"
direction = "0.18"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
rand = "0.8"
grid_2d = "0.15"
